docs: give each configuration document one question to answer (LDM-#1818)
Three documents competed to explain configuration, and the investigation
recommended deleting conventions_and_config.md and merging its parts into the
other two. Reading all three showed that backwards, so this does the opposite.

conventions_and_config.md is the ACCURATE one. Its precedence section matches
ldm_core/defaults.py:51-55,68-72 and utils.py:4072-4075 exactly -- five levels,
CLI down to convention -- and it carries the LDM-#1651 warning about
'ldm defaults' versus 'ldm config set', which is the single most useful
paragraph in the three files. It was also the most recently reviewed. Deleting
it would have thrown away the only correct account of the cascade and kept two
wrong ones.

What the three now answer, with no overlap:

  explanation/conventions_and_config.md  how a setting resolves, and the
                                         default stack
  explanation/conventions.md             what LDM does for you out of the box
  reference/configuration.md             what you can set

Nothing is deleted, so no link breaks and no redirect is needed.

Four factual errors fixed, each verified against source and then against the
built HTML:

reference/configuration.md stated a hierarchy with no CLI level at all, and a
'Workspace Defaults (.ldmrc)' level that does not exist -- a workspace .ldmrc is
read once, as an import manifest (pipelines/import_pipeline.py:309-313), and
DefaultsManager never consults it. It also gave the convention default for
search as 'sidecar'; defaults.py:12 is 'shared'. And it called project metadata
'.liferay-docker.meta', a legacy name -- constants.py:43 is 'meta'.

conventions.md sold a self-tuning JVM with '-Xverify:none'. LDM-#1447 already
established that flag never existed; the only occurrences in the repo are a test
guard forbidding it and a comment explaining why not. advanced_cli.md:99 has
refuted it since, but conventions.md was missed. Its stack tabl